fixing the menu from drifting off screen on smaller sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,7 +136,7 @@ div {
 
 /* headings and headline */
 header {
-    position: sticky;
+
     text-align: center;
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
@@ -222,7 +222,7 @@ h4 {
     color: black;
     float: left;
     padding-top: 20px;
-    margin: 0px;
+
 
 }
 
@@ -277,7 +277,6 @@ h4 {
 .menu-button::after {
     display: block;
     background-color: blanchedalmond;
-    position: absolutes;
     height: 4px;
     width: 30px;
     transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -293,8 +292,8 @@ h4 {
 .menu-button::before {
     content: '';
     margin-top: -8px;
-    margin-bottom: 10px;
-    margin-right: 10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
 }
 
 .menu-button::after {
@@ -324,7 +323,6 @@ h4 {
     .menu-button #menu.top-nav {
         display: flex;
         flex-direction: column;
-        size-adjust: auto;
         font-size: small;
         margin-bottom: 10px;
     }
@@ -337,15 +335,16 @@ h4 {
             font-size: small;
             margin-right: 10px;
             margin-top: 10px;
-            margin-bottom: 10px;
-            padding-top: 0;
-            padding-right: 5px;
+            padding-right: 40px;
             padding-bottom: 20px;
-            max-width: 30%;
+            padding-left: 1px;
+            max-width: 10%;
             width: 10%;
             height: 10px;
             display: flex;
             float: left;
+            padding-inline: 3px;
+
 
 
         }
@@ -354,7 +353,8 @@ h4 {
     @media (min-width: 320px) {
 
         #logo {
-            font-size: 180%;
+            font-size: 110%;
+
         }
     }
 
@@ -364,6 +364,7 @@ h4 {
         .menu-button {
             color: red;
             padding-bottom: 100px;
+            padding-left: 50px;
 
         }
     }
@@ -418,7 +419,7 @@ h4 {
     float: right;
     position: sticky;
     list-style-type: none;
-    margin-left: 50px;
+    margin-left: 10px;
     margin-bottom: 50px;
     padding: 10px;
 }
@@ -433,7 +434,6 @@ h4 {
 table,
 th,
 td {
-
     border: 1px solid black;
     background-color: #fafafa;
     width: 50%;
@@ -451,7 +451,7 @@ td {
 /*section of both tables*/
 #contactinfo {
 
-    size-adjust: 100%;
+
     width: 100%;
 
 }
@@ -569,6 +569,5 @@ footer {
 
 #menu-toggle:checked~.control-me {
     display: block;
-    margin-bottom: auto;
-    margin-right: auto;
+
 }
